[package]
name = "async-resol-vbus"
version = "0.1.0"
authors = ["Daniel Wippermann <Daniel.Wippermann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"async-std" = "1.5.0"
# FIXME(daniel): do not use relative path dep here!
"resol-vbus" = { path = "../resol-vbus.rs" }
