[package]
name = "vbus_serial_to_tcp"
version = "0.1.0"
authors = ["Daniel Wippermann <daniel.wippermann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-resol-vbus = { path = "../.." }
async-std = "1.9.0"
clap = "2.33.3"
env_logger = "0.8.4"
log = "0.4.0"
serialport = "4.0.1"
